feat: Add Gamification (Badges) and AI Moderation dashboard