@@ -151,7 +151,8 @@ public class AdminControllerTest {
     @Test
     @WithMockUser(roles = "ADMIN")
     public void testGetStatsAdminAccess() throws Exception {
-        when(adminService.getStats()).thenReturn(new StatsResponse(10, 20, java.util.Map.of(), java.util.Map.of(), java.util.List.of(), 1500.0));
+        StatsResponse statsResponse = new StatsResponse(10, 50, Collections.emptyMap(), Collections.emptyMap(), Collections.emptyList(), 0.0, Collections.emptyMap());
+        when(adminService.getStats()).thenReturn(statsResponse);
         mockMvc.perform(get("/api/admin/stats"))
                .andExpect(status().isOk());
     }
